[package]
name = "sp1-perf"
description = "A performance evaluation tool for SP1 programs."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }
default-run = "sp1-perf"
publish = false

[dependencies]
sp1-core-executor = { workspace = true }
sp1-sdk = { workspace = true, features = ["native-gnark", "network"] }
sp1-prover = { workspace = true }
sp1-prover-types = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-hypercube = { workspace = true }
sp1-primitives = { workspace = true }
sp1-cuda = { workspace = true }
slop-algebra = { workspace = true }
clap = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rand = { workspace = true }
async-scoped = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
test-artifacts = { path = "../test-artifacts" }

[[bin]]
name = "sp1-perf"
path = "src/perf.rs"

[[bin]]
name = "sp1-perf-executor"
path = "src/executor.rs"

[[bin]]
name = "sp1-perf-setup"
path = "src/setup.rs"

[features]
bigint-rug = ["sp1-core-executor/bigint-rug"]
native-gnark = ["sp1-sdk/native-gnark"]
network = ["sp1-sdk/network"]
