[package]
name = "poseidon2-paramgen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "poseidon2-paramgen"
path = "src/main.rs"

[dependencies]
num-bigint = { version = "0.4.3", default-features = false, features = ["std"] }
num-traits = "0.2.16"
hex = "0.4"


