[package]
name = "sp1-primitives"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
bincode = "1.3.3"
hex = "0.4.3"
lazy_static = "1.5.0"
num-bigint = { version = "0.4.6", default-features = false }
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
serde = { version = "1.0.207", features = ["derive"] }
sha2 = "0.10.8"
