[package]
name = "sp1-primitives"
description = "Core primitive types for SP1"
readme = "../../README.md"

# Note: The release workflow depends on `sp1-build` version being set by the workspace, and that the `sp1-build` version refers to the canonical version.
# **Do not change this**, unless the release workflow is changed accordingly.
#
# The version of `sp1-build` is used for:
# - The name of the release tag on merge to `main`.
# - The default Docker image tag for this SP1 version..
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

[dependencies]
bincode = { workspace = true }
blake3 = { workspace = true }
elf = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
slop-algebra = { workspace = true }
slop-challenger = { workspace = true }
slop-bn254 = { workspace = true }
slop-koala-bear = { workspace = true }
slop-poseidon2 = { workspace = true }
slop-primitives ={ workspace = true }
slop-symmetric = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }

[lints]
workspace = true
