[package]
name = "sp1-prover"
description = "The SP1 prover implementation"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
sp1-recursion-compiler = { workspace = true }
sp1-prover-types = { workspace = true }
sp1-verifier = { workspace = true }

sp1-recursion-circuit = { workspace = true }
sp1-recursion-machine = { workspace = true }
sp1-recursion-executor = { workspace = true }
sp1-jit = { workspace = true }
sp1-recursion-gnark-ffi = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-derive = { workspace = true }

slop-challenger = { workspace = true }
slop-basefold = { workspace = true }
sp1-hypercube = { workspace = true }
slop-air = { workspace = true }
slop-jagged = { workspace = true }
slop-futures = { workspace = true }
slop-symmetric = { workspace = true }
slop-multilinear = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-primitives = { workspace = true }
slop-algebra = { workspace = true }
slop-bn254 = { workspace = true }
slop-stacked = { workspace = true }
# slop-util = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "sync",
    "fs",
    "process",
] }
futures = { workspace = true }
serial_test = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
lru = { workspace = true }
eyre = { workspace = true }
hashbrown = { workspace = true, features = ["inline-more"] }
enum-map = { workspace = true }
either = { workspace = true }
static_assertions = { workspace = true }
rand = { workspace = true }
mti = { workspace = true }
opentelemetry = { workspace = true }
pin-project = { workspace = true }
tonic = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
indicatif = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[build-dependencies]
downloader = { workspace = true, features = ["rustls-tls", "verify"] }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
test-artifacts = { path = "../test-artifacts" }
anyhow = { workspace = true }

[[bin]]
name = "build_recursion_vks"
path = "scripts/build_recursion_vks.rs"
required-features = ["tokio/rt-multi-thread"]

[[bin]]
name = "post_trusted_setup"
path = "scripts/post_trusted_setup.rs"

[[bin]]
name = "build_groth16_bn254"
path = "scripts/build_groth16_bn254.rs"

[[bin]]
name = "build_plonk_bn254"
path = "scripts/build_plonk_bn254.rs"

[features]
native-gnark = ["sp1-recursion-gnark-ffi/native"]
debug = ["sp1-core-machine/debug"]
bigint-rug = ["sp1-core-machine/bigint-rug"]
experimental = []
profiling = ["sp1-core-executor/profiling", "sp1-jit/profiling"]

[lints]
workspace = true
